num_enum/tests/try_build/not_nightly/compile_fail/garbage_attribute.stderr
error: Invalid attribute: expected `default` or `alternatives`
 --> $DIR/garbage_attribute.rs:5:5
  |
5 |     #[num_enum(garbage)]
  |     ^
